[package]
name = "eb_interface_rs"
version = "0.0.18"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cloudacy/eb_interface_rs"
include = ["src/", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "benches",
]

[dependencies]
regex = { version = "1.11.1", default-features = false, features = [] }
rust_decimal = { version = "1.37.2", default-features = false, features = [] }
